# ultrasonic.soniclib

./: .clang-format  .gitignore  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  annotated.html  ch101_8h.html  ch101_8h_source.html  ch101__gpr_8c.html  ch101__gpr_8h.html  ch101__gpr_8h_source.html  ch101__gprmt_8c.html  ch101__gprmt_8h.html  ch101__gprmt_8h_source.html  ch201_8h.html  ch201_8h_source.html  ch201__gprmt_8c.html  ch201__gprmt_8h.html  ch201__gprmt_8h_source.html  ch__api_8c.html  ch__asic__shasta_8h.html  ch__asic__shasta_8h_source.html  ch__asic__whitney_8h.html  ch__asic__whitney_8h_source.html  ch__common_8c.html  ch__common_8h.html  ch__common_8h_source.html  ch__driver_8c.html  ch__driver_8h.html  ch__driver_8h_source.html  ch__extra__display__utils_8c.html  ch__extra__display__utils_8h.html  ch__extra__display__utils_8h_source.html  ch__helper_8h.html  ch__helper_8h_source.html  ch__log_8c.html  ch__log_8h.html  (+201 more)
.github/ISSUE_TEMPLATE/: default-issue-template.md
.github/workflows/: ci.yml
CMakeToolchains/: arm-none-eabi-m4.cmake  gcc-w64-x86_64.cmake  mingw-w64-x86_64.cmake
doc/: soniclib-v4-migration-guide.md
invn/icu_interface/: shasta_external_regs.h
invn/soniclib/: ch_api.c  ch_common.c  ch_driver.c  ch_log.c  ch_log.h  ch_math_utils.c  chbsp_dummy.c  chirp_bsp.h  soniclib.h
invn/soniclib/details/: ch_asic_shasta.h  ch_common.h  ch_driver.h  ch_math_utils.h  chirp_board_config.h  icu.h  icu_shasta_algo_structs.h
invn/soniclib/details/shasta/: README.txt  shasta_external_regs.h  shasta_iq_format.h  shasta_pmut_cmds.h
invn/soniclib/extra/: ch_extra_display_utils.c
invn/soniclib/sensor_fw/ch101/: ch101.h  ch101_gpr.c  ch101_gpr.h  ch101_gpr_fw.c  ch101_gprmt.c  ch101_gprmt.h
invn/soniclib/sensor_fw/ch201/: ch201.h  ch201_gprmt.c  ch201_gprmt.h  ch201_gprmt_fw.c
invn/soniclib/sensor_fw/chx01/: chx01_freqsweep.c  chx01_freqsweep.h  chx01_freqsweep_fw.c
invn/soniclib/sensor_fw/icu_gpt/: _icu_gpt_plugin_version.c  icu_algo_format.h  icu_gpt.c  icu_gpt.h  icu_gpt_fw.c  icu_rangefinder_interface.h  icu_shasta_algo_structs.h  shasta_gpt_interface.h  shasta_iq_format.h
invn/soniclib/sensor_fw/icu_init/: _icu_init_plugin_version.c  icu_algo_format.h  icu_init.c  icu_init.h  icu_init_fw.c  shasta_init_interface.h
invn/soniclib/sensor_fw/icu_init-no-txopt/: _icu_init-no-txopt_plugin_version.c  icu_algo_format.h  icu_init-no-txopt.c  icu_init-no-txopt.h  icu_init-no-txopt_fw.c  shasta_init_interface.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  (+25 more)
